Health Check Implementation
Health Check Implementation

--- a/rahulpatil/angular.json
+++ b/rahulpatil/angular.json
@@ -127,5 +127,8 @@
       }
     }
   },
-  "defaultProject": "rahulpatil"
+  "defaultProject": "rahulpatil",
+  "cli": {
+    "analytics": false
+  }
 }
