--- a/rahulpatil.csproj
+++ b/rahulpatil.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -25,7 +25,11 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="ViewModels\" />
+    <Folder Include="rahulpatil\src\app\common\" />
+    <Folder Include="rahulpatil\src\app\core\" />
+    <Folder Include="rahulpatil\src\app\modules\healthcheck\" />
+    <Folder Include="rahulpatil\src\app\shared\" />
+    <Folder Include="rahulpatil\src\assets\images\" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
