--- a/rahulpatil.csproj
+++ b/rahulpatil.csproj
@@ -10,10 +10,17 @@
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
+    <UserSecretsId>6ff4b48a-a033-43a6-94c3-fd5d5d2f8360</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -25,11 +32,18 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="rahulpatil\src\app\common\" />
     <Folder Include="rahulpatil\src\app\core\" />
-    <Folder Include="rahulpatil\src\app\modules\healthcheck\" />
     <Folder Include="rahulpatil\src\app\shared\" />
     <Folder Include="rahulpatil\src\assets\images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="rahulpatil\src\assets\images\main.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="rahulpatil\src\assets\images\rahulpatil.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
